# flask-cli-app

./: README.md  celery_worker.py  config.py  pyproject.toml
cli/: __init__.py  app.py  models.py  tasks.py  views.py
cli/templates/: _layout.html  index.html  navbar.html  page-header.html
